BookListItem: Fix display overlap

--- a/ui/src/calibredb/components/BookListItem.scss
+++ b/ui/src/calibredb/components/BookListItem.scss
@@ -1,5 +1,4 @@
 #app .book-list-item {
-  margin: 0;
   padding: 0;
   margin: 5px;
   cursor: default;
